--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,10 @@ group 'com.cbcloud.channel_io_flutter'
 version '1.0'
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.8.22'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -17,7 +17,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -46,6 +46,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "io.channel:plugin-android:11.1.0"
+    implementation "io.channel:plugin-android:11.2.0"
     implementation "com.google.firebase:firebase-messaging:20.1.0"
 }
