--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: channel_io_flutter
 description: A new flutter plugin project.
-version: 0.0.21
+version: 0.0.22
 author:
 homepage:
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0"
+  flutter: '>=1.20.0'
 
 dependencies:
   flutter:
@@ -24,4 +24,3 @@ flutter:
         pluginClass: ChannelIoFlutterPlugin
       ios:
         pluginClass: ChannelIoFlutterPlugin
-
